codama-macros/tests/codama_attribute/type_nodes/boolean_type_node/size_already_set.fail.rs
use codama::codama;

#[codama(type = boolean(number(u32), number(u32)))]
pub struct Test;

#[codama(type = boolean(size = number(u32), size = number(u32)))]
pub struct TestExplicit;

fn main() {}
